[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/Images/arrow.png" type="Texture" id=1]
[ext_resource path="res://scripts/TrainingMenu.gd" type="Script" id=2]
[ext_resource path="res://Audio/button-press-sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Fonts/Calistoga/Calistoga-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.02, 0.4, 0.6 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.988235, 0.427451, 0, 1 )

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )
top_radius = 0.1
bottom_radius = 0.1
height = 0.07

[sub_resource type="CylinderShape" id=4]
radius = 0.1
height = 0.1

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.05, 0.4, 0.5 )

[sub_resource type="ViewportTexture" id=9]
viewport_path = NodePath("ExitToMenuButton/Viewport")

[sub_resource type="BoxShape" id=10]
extents = Vector3( 0.187755, 0.2, 0.247566 )

[sub_resource type="DynamicFont" id=11]
size = 200
font_data = ExtResource( 4 )

[sub_resource type="ViewportTexture" id=13]
viewport_path = NodePath("Viewport")

[sub_resource type="DynamicFont" id=12]
size = 52
outline_size = 1
outline_color = Color( 0.027451, 0.0156863, 0, 1 )
font_data = ExtResource( 4 )

[node name="TrainingMenu" type="MeshInstance"]
cast_shadow = 0
mesh = SubResource( 1 )
material/0 = null
script = ExtResource( 2 )

[node name="ButtonPressSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="PreviousButton" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.04, -0.0738509, 0.15 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="PreviousButton"]
transform = Transform( -0.2, 1.74846e-08, 7.64274e-16, 0, -8.74228e-09, 0.2, 1.74846e-08, 0.2, 8.74228e-09, -2.22045e-16, 0.0351709, 0 )
texture = ExtResource( 1 )

[node name="PreviousButtonArea" type="Area" parent="PreviousButton"]

[node name="PreviousButtonCollisionShape" type="CollisionShape" parent="PreviousButton/PreviousButtonArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0139093, 0 )
shape = SubResource( 4 )

[node name="NextButton" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.04, -0.0738509, -0.15 )
cast_shadow = 0
mesh = SubResource( 3 )
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="NextButton"]
transform = Transform( -0.2, 1.74846e-08, -7.64274e-16, 0, -8.74228e-09, -0.2, -1.74846e-08, -0.2, 8.74228e-09, 0, 0.0373998, 0 )
texture = ExtResource( 1 )

[node name="NextButtonButtonArea" type="Area" parent="NextButton"]

[node name="NextButtonCollisionShape" type="CollisionShape" parent="NextButton/NextButtonButtonArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0139093, 0 )
shape = SubResource( 4 )

[node name="TimerButtonLock" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="ExitToMenuButton" type="MeshInstance" parent="."]
transform = Transform( 0.999999, 0, -2.98023e-08, 0, 0.715834, 0, 0, 0, 0.665745, -2.98023e-07, 0, -0.611505 )
mesh = SubResource( 8 )
skeleton = NodePath("../..")
material/0 = null

[node name="Sprite3D" type="Sprite3D" parent="ExitToMenuButton"]
transform = Transform( -7.82311e-08, 0, -1, 0, 0.2, 0, 0.2, 0, 1.78814e-07, 0.0310062, 0.0604407, 0.0527057 )
texture = SubResource( 9 )

[node name="ExitToMenuGameButtonArea" type="Area" parent="ExitToMenuButton"]

[node name="CollisionShape" type="CollisionShape" parent="ExitToMenuButton/ExitToMenuGameButtonArea"]
transform = Transform( 1, 0, -1.19209e-07, 0, 1, 0, 0, 0, 1, -0.179721, 0, -5.96046e-08 )
shape = SubResource( 10 )

[node name="Viewport" type="Viewport" parent="ExitToMenuButton"]
size = Vector2( 200, 200 )
transparent_bg = true
handle_input_locally = false
render_target_v_flip = true

[node name="Label" type="Label" parent="ExitToMenuButton/Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.705882, 0.00392157, 0.00392157, 1 )
custom_fonts/font = SubResource( 11 )
text = "X"

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( -1.09278e-08, 0, 1, 0, 0.25, 0, -0.25, 0, -4.37114e-08, 0.0117449, -0.299502, -0.365979 )
texture = SubResource( 13 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 400, 400 )
transparent_bg = true
render_target_v_flip = true

[node name="CurrentTutorialLabel" type="Label" parent="Viewport"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 12 )
text = "0/0"

[connection signal="area_entered" from="PreviousButton/PreviousButtonArea" to="." method="_on_PreviousButtonArea_area_entered"]
[connection signal="area_exited" from="PreviousButton/PreviousButtonArea" to="." method="_on_PreviousButtonArea_area_exited"]
[connection signal="area_entered" from="NextButton/NextButtonButtonArea" to="." method="_on_NextButtonButtonArea_area_entered"]
[connection signal="area_exited" from="NextButton/NextButtonButtonArea" to="." method="_on_NextButtonButtonArea_area_exited"]
[connection signal="area_entered" from="ExitToMenuButton/ExitToMenuGameButtonArea" to="." method="_on_ExitToMenuGameButtonArea_area_entered"]
